--- a/Style.css
+++ b/Style.css
@@ -48,7 +48,7 @@ main {
     flex-grow: 1;
     display: flex;
     background-color: #171717;
-    padding: 20px;
+    padding: 80px;
     border-radius: 40px;
     margin: 0 auto 20px auto;
     width: 96%;
@@ -63,9 +63,91 @@ main.home {
     font-size: 7em;
 }
 
+main.aboutMe {
+    flex-direction: column;
+    gap: 40px;
+    width: 98%;
+    max-width: 1600px;
+}
+
+.aboutMe section h2 {
+    font-size: 60px;
+    margin-bottom: 20px;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+.aboutMe p,
+.aboutMe li {
+    font-size: 30px;
+    line-height: 1.6;
+}
+
+.bild {
+    background-color: #d3d3d3;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.bild.gross {
+    width: 260px;
+    height: 260px;
+    font-size: 1.2em;
+}
+
+.bild.klein {
+    width: 80px;
+    height: 80px;
+    font-size: 1em;
+}
+
+.lebenslauf-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.lebenslauf-content ul {
+    padding-left: 20px;
+}
+
+.lebenslauf-content img {
+    padding-right: 60px;
+}
+
+.hobby {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 20px;
+}
+
+.hobby img{
+max-width: 30%;
+}
+
+.wohnort-bild {
+    width: 100%;
+    height: 160px;
+    font-size: 1.2em;
+    margin-bottom: 10px; 
+}
+
 footer {
     text-align: right;
     padding: 10px 20px;
     font-size: 0.9em;
     color: white;
+}
+
+.wohnort img {
+    width: 100%;
+    height: auto;
+    border-radius: 16px;
+    margin-bottom: 16px;
 }
